<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name">Quran (Egypt Shamarly Haramin)</string>
    <string name="about_the_developer">About the App</string>
    <string name="local">ع</string>
    <string name="go_to">Go to</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarked">Un-Bookmark</string>
    <string name="surah">Surah</string>
    <string name="juz">Juz\'</string>
    <string name="hezb">Hezb</string>
    <string name="page">Page</string>
    <string name="medinan">-{Medinan}-</string>
    <string name="meccan">-=Meccan=-</string>
    <string name="dialog_Developer">My Name is Shady Selim \nThis is a free app that doesn\'t need internet except for tafseer \nIt has been developed with individual effort seeking Allah hasanat \nand I won\'t collect any info from your device \nI opened sourced my code to assure you, and if you like to contribute</string>
    <string name="visit">LinkedIn</string>
    <string name="cancel">Code in Github</string>
    <string name="Quran_Page">Quran Page</string>
    <string name="title_activity_main">Quran (Egypt Print)</string>
    <string name="save_success">Page Saved</string>
    <string name="bookmark_save_success">Bookmark Saved</string>
    <string name="bookmark_error">Bookmark Failed</string>
    <!--<string name="save_failed">Sorry couldn\'t save your last page</string>-->
    <string name="back_exit">Click BACK again to exit</string>

    <string name="friday">It\'s Friday, Don\'t forget to read Surah Al-kahf</string>
    <string name="werd">Remember to read some Ayat of Quran Kareem in your day</string>
    <string name="rate">Hope you like it. Please rate me in Google Play</string>

    <string name="al_Fatihah">Al-faatiHah</string>
    <string name="al_Baqarah">Al-baqarah</string>
    <string name="Al_Imran">Aali-\`imraan</string>
    <string name="an_Nisa">An-nisaa\`</string>
    <string name="al_Maidah">Al-maa\`idah</string>
    <string name="al_Anam">Al-an\`aam</string>
    <string name="al_Araf">Al-a\`raaf</string>
    <string name="al_Anfal">Al-anfaal</string>
    <string name="at_Taubah">At-tawbah</string>
    <string name="Yunus">Yoonus</string>
    <string name="Hud">Hood</string>
    <string name="Yusuf">Yoosuf</string>
    <string name="ar_Rad">Ar-Ra\`d</string>
    <string name="Ibrahim">Ibraheem</string>
    <string name="al_Hijr">Al-Hijr</string>
    <string name="an_Nahl">An-nahl</string>
    <string name="Al_Isra">Al-Isra\`</string>
    <string name="al_Kahf">Al-kahf</string>
    <string name="Maryam">Maryam</string>
    <string name="Ta_Ha">Taa haa</string>
    <string name="al_Anbiya">Al-anbiyaa\`</string>
    <string name="al_Hajj">Al-Hajj</string>
    <string name="al_Muminun">Al-mu\`minoon</string>
    <string name="An_Nur">An-noor</string>
    <string name="al_Furqan">Al-furqaan</string>
    <string name="ash_Shuara">Ash-Shu\`ara\`</string>
    <string name="an_Naml">An-naml</string>
    <string name="al_Qasas">Al-qasas</string>
    <string name="al_Ankabut">Al-\`ankaboot</string>
    <string name="ar_Rum">Ar-room</string>
    <string name="Luqman">Luqmaan</string>
    <string name="as_Sajdah">As-sajdah</string>
    <string name="al_Ahzab">Al-ahzab</string>
    <string name="Saba">Saba\`</string>
    <string name="Fatir">Faatir</string>
    <string name="Ya_Sin">Yaa seen</string>
    <string name="as_Saffat">As-Saaffaat</string>
    <string name="Sad">Saad</string>
    <string name="az_Zumar">Az-zumar</string>
    <string name="Ghafir">Ghafir</string>
    <string name="Fussilat">Fussilat</string>
    <string name="ash_Shura">Ash-shooraa</string>
    <string name="az_Zukhruf">Azl-zukhruf</string>
    <string name="ad_Dukhan">Ad-dukhaan</string>
    <string name="al_Jathiyah">Al-jaathiyah</string>
    <string name="al_Ahqaf">Al-ahqaaf</string>
    <string name="Muhammad">Muhammad</string>
    <string name="al_Fath">Al-fath</string>
    <string name="al_Hujurat">Al-Hujuraat</string>
    <string name="Qaf">Qaaf</string>
    <string name="ad_Dhariyat">Ad-dhaariyaat</string>
    <string name="at_Tur">At-Toor</string>
    <string name="an_Najm">An-najm</string>
    <string name="al_Qamar">Al-qamar</string>
    <string name="ar_Rahman">Ar-rahmaan</string>
    <string name="al_Waqiah">Al-waaqi\`ah</string>
    <string name="al_Hadid">Al-Hadeed</string>
    <string name="al_Mujadilah">Al-mujaadilah</string>
    <string name="al_Hashr">Al-Hashr</string>
    <string name="al_Mumtahanah">Al-mumtahanah</string>
    <string name="as_Saff">As-saff</string>
    <string name="al_Jumuah">Al-jumu\`ah</string>
    <string name="al_Munafiqun">Al-munafiqoon</string>
    <string name="at_Taghabun">At-taghaabun</string>
    <string name="at_Talaq">At-Talaaq</string>
    <string name="at_Tahrim">At-tahreem</string>
    <string name="al_Mulk">Al-mulk</string>
    <string name="al_Qalam">Al-qalam</string>
    <string name="al_Haqqah">Al-Haaqqah</string>
    <string name="al_Maarij">Al-ma\`aarij</string>
    <string name="Nuh">Nooh</string>
    <string name="al_Jinn">Al-jinn</string>
    <string name="al_Muzammil">Al-muzammil</string>
    <string name="al_Mudathir">Al-muddaththir</string>
    <string name="al_Qiyamah">Al-Qiyamah</string>
    <string name="al_Insane">Al-insane</string>
    <string name="al_Mursalat">Al-mursalaat</string>
    <string name="an_Naba">An-naba\`</string>
    <string name="an_Naziat">An-naazi\`aat</string>
    <string name="abasa">\`Abasa</string>
    <string name="at_Takwir">At-takweer</string>
    <string name="al_Infitar">Al-infiTaar</string>
    <string name="al_Mutaffifeen">Al-Mutaffifeen</string>
    <string name="al_Inshiqaq">Al-inshiqaaq</string>
    <string name="al_Buruj">Al-burooj</string>
    <string name="at_Tariq">At-Taariq</string>
    <string name="al_Ala">Al-A\`laa</string>
    <string name="al_Ghashiya">Al-ghaashiyah</string>
    <string name="al_Fajr">Al-fajr</string>
    <string name="al_Balad">Al-balad</string>
    <string name="ash_Shams">Ash-shams</string>
    <string name="al_Layl">Al-lail</string>
    <string name="ad_Duha">Ad-Duhaa</string>
    <string name="ash_Sharh">Ash-Sharh</string>
    <string name="at_Tin">At-Teen</string>
    <string name="al_Alaq">Al-\`alaq</string>
    <string name="al_qadr">Al-qadr</string>
    <string name="al_Bayyinah">Al-bayyinah</string>
    <string name="Az_Zalzala">Az-Zalzala</string>
    <string name="al_Adiyat">Al-\`aadiyaat</string>
    <string name="al_Qariah">Al-qaari\`ah</string>
    <string name="at_Takathur">At-takaathur</string>
    <string name="al_Asr">Al-\`asr</string>
    <string name="al_Humazah">Al-humazah</string>
    <string name="al_Fil">Al-feel</string>
    <string name="al_Quraish">Al-quraish</string>
    <string name="al_Maun">Al-maa\`oon</string>
    <string name="al_Kauthar">Al-kauthar</string>
    <string name="al_Kafirun">Al-kaafiroon</string>
    <string name="an_Nasr">An-nasr</string>
    <string name="al_Masad">Al-masad</string>
    <string name="al_Ikhlas">Al-ikhlaas</string>
    <string name="al_Falaq">Al-falaq</string>
    <string name="an_Nas">An-naas</string>
    <string name="tafseer">Tafseer Hezb</string>
    <string name="tafseer2">Tafseer Hezb 2</string>
    <string name="change_image_size">Change Page Size</string>
    <string name="change_color">Change Color (Dark-Light mode)</string>
    <string name="dis_allow_click_to_forward">Dis/Allow Click to Forward</string>
</resources>
