<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:fab="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:id="@+id/main_content"
                                                     android:layout_width="fill_parent"
                                                     android:layout_height="fill_parent"
                                                     android:fitsSystemWindows="true"
                                                     tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:keepScreenOn="true"
            android:paddingTop="20dp">

    </androidx.viewpager.widget.ViewPager>

    <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab"
            style="@style/FabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="-27dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            fab:menu_animationDelayPerItem="50"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_colorPressed="@color/navigationBarColor"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_fab_label="@string/go_to"
            fab:menu_fab_size="mini"
            fab:menu_icon="@drawable/ic_expand"
            fab:menu_labels_colorNormal="@color/navigationBarColor"
            fab:menu_labels_colorPressed="@color/colorAccent"
            fab:menu_labels_colorRipple="#66FFFFFF"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_paddingBottom="4dp"
            fab:menu_labels_paddingLeft="8dp"
            fab:menu_labels_paddingRight="8dp"
            fab:menu_labels_paddingTop="4dp"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_textColor="#FFFFFF"
            fab:menu_labels_textSize="14sp"
            fab:menu_openDirection="down"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_bookmark"
                style="@style/MenuButtonsSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark_24dp"
                fab:fab_label="@string/bookmark" />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_hezb"
                style="@style/MenuButtonsSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hezb"
                fab:fab_label="@string/hezb" />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_juz"
                style="@style/MenuButtonsSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hezb"
                fab:fab_label="@string/juz" />

        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/action_surah"
                style="@style/MenuButtonsSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_surah"
                fab:fab_label="@string/surah" />
    </com.github.clans.fab.FloatingActionMenu>

    <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"
            android:textColor="@android:color/white" />
    <ImageView
            android:id="@+id/bookmark"
            android:src="@drawable/ic_bookmark_black_96dp"
            android:paddingTop="6dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>